@@ -431,5 +431,7 @@ GError *g_error_new (gpointer domain, gint code, const char *format, ...);
  */
 gchar  *g_build_path  (const gchar *separator, const gchar *first_element, ...);
 #define g_build_filename(x...) g_build_path(G_DIR_SEPARATOR_S, x)
+gchar  *g_path_get_dirname (const gchar *filename);
+gchar  *g_path_get_basename (const char *filename);
 
 #endif
