@@ -1,6 +1,8 @@
 2006-08-24  Miguel de Icaza  <miguel@novell.com>
 
-	* src/gport.c: Path routines
+	* src/gpath.c: Add g_path_get_dirname, g_path_get_basename
+
+	* src/gpath.c: Path routines
 
 2006-08-23  Miguel de Icaza  <miguel@novell.com>
 
